fix button sizes on mobile + fix toaster borders

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@
         @apply transition-all ease-in-out hover:scale-90
     }
     .btns {
-        @apply border-2 p-2 border-[#60B7BC] disabled:border-[#163638] sm:w-[180px] sm:h-[50px] font-bold text-xl uppercase tracking-widest text-black hover:border-[#499a9e] rounded-md transition-all ease-in-out
+        @apply border-2 p-2 border-[#60B7BC] disabled:border-[#163638] w-[180px] h-[50px] font-bold text-xl uppercase tracking-widest text-black hover:border-[#499a9e] rounded-md transition-all ease-in-out
     }
     .incrementbtn {
         @apply border-2 border-[#60B7BC] disabled:border-[#163638] text-black p-2 flex justify-center items-center rounded-full hover:border-[#499a9e] transition-all ease-in-out
